fixed overflow on pdf

--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -30,6 +30,7 @@
 
 .PDFPageOne {
     margin-bottom: 25px;
+    overflow: hidden !important;
 }
 
 .PDFPage > canvas {
